--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,6 @@ body{
 
 .btn-whatsapp-header:hover{
     background-color: var(--color-green-bnt)
-
 }
 
 .icon-whatsapp{
@@ -63,6 +62,8 @@ body{
 }
 
 .btn-whatsapp{
+    display: flex;
+    align-items: center;
     color: var(--color-white);
     text-decoration: none;
     font-size: 15px;
