--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@
 
 body{
     font-family: sans-serif;  
-    background-image: url(/img/background.svg);
+    background-image: url(https://misael-mra.github.io/portifolio-01/img/background.svg);
     background-position: 0% 50%;
     background-repeat: no-repeat;
     background-attachment: scroll; 
