alteração no css

--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ body{
     vertical-align: middle;
 }
 
-.colun-home-01{
+.colun-home{
     width: 45%;
     font-size: 40px;
     font-weight: bold;
