--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,8 @@ body{
 }
 
 .btn-whatsapp-header:hover{
-    background-color: var(--color-green-bnt)
+    background-color: var(--color-green-bnt);
+    transition: 0.6s;
 }
 
 .icon-whatsapp{
@@ -78,7 +79,7 @@ body{
     margin: 0 auto;
     margin-top: 30px;
     color: #18183a;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 .img-home{
