--- a/css/style.css
+++ b/css/style.css
@@ -11,12 +11,12 @@
 }
 
 * {
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
 }
 
 body{
-    font-family: sans-serif;  
+    font-family: sans-serif; 
     background-image: url(https://misael-mra.github.io/site-corretoraseguros/img/background.svg);
     background-position: 0% 50%;
     background-repeat: no-repeat;
@@ -36,6 +36,7 @@ body{
     justify-content: space-around;
     margin-top: 25px;
     font-weight: bold;
+    color: var(--color-black-header);
 }
 
 .navigation a{
@@ -76,7 +77,6 @@ body{
     align-items: center;
     flex-flow: row;
     width: 90%;
-    margin: 0 auto;
     margin-top: 30px;
     color: #18183a;
     justify-content: center;
@@ -96,4 +96,53 @@ body{
 
 .name-pl{
    font-size: 25px;
+}
+
+a{
+    text-decoration: none;
+    color: var(--color-black-header);
+}
+
+.h2-seguros{
+    display: block !important;
+    text-align: center;
+    font-size: 25px;
+    padding: 80px;
+}
+
+.grade-seguros{
+    display: flex;
+    align-items: center;
+    width: 90%;
+}
+
+.a-seguros{
+    width: 30%;
+    background-color: var(--color-grey);
+    padding: 1%;
+}
+
+#img-seguro-auto{
+    width: 100px;
+}
+
+.icon-seguros{
+    display: flex;
+    align-items: center;
+    vertical-align: middle;
+    background-color: #008f00;
+    width: 30%;
+    border-radius: 10px;
+    padding: 15px 10px 15px 15px;
+}
+
+.titulo-seguros{
+    font-size: 20px;
+    text-align: center;
+    padding: 8%;
+}
+
+.subtitulo-seguros{
+    text-align: justify;
+    font-size: 14px;
 }
